--- a/valuehunterweb/package.json
+++ b/valuehunterweb/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.2",
     "components": "^0.1.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
