--- a/valuehunterweb/package.json
+++ b/valuehunterweb/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
+    "@supabase/auth-helpers-nextjs": "^0.7.0-next.8",
+    "@supabase/auth-helpers-react": "^0.4.0-next.0",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.39.6",
